--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <footer class="">
         This site is No Copyright
     </footer>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script type="text/javascript" src="./script/YoutubeIFrameAPI.js"></script>
     <script type="text/javascript" src="./script/script.js"></script>
     </body>
