--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <ul id="videoList"></ul>
             <div id="shareForm">
-                <input type="text" id="shareUrl" class="form">
+                <input type="text" id="shareUrl" class="form" readonly="readonly">
                 <button type="button" id="btMakeShareUrl" class="form">共有</button>
             </div>
         </div>
