--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul id="videoList"></ul>
             <div id="shareForm">
                 <input type="text" id="shareUrl" class="form" readonly="readonly">
-                <button type="button" id="btMakeShareUrl" class="form">共有</button>
+                <button type="button" id="btMakeShareUrl" class="form" title="Copy to Clipboard">共有</button>
             </div>
         </div>
         <div id="videoForm">
